[gd_scene load_steps=10 format=3 uid="uid://cdb4u3isjd6wk"]

[ext_resource type="Script" uid="uid://cwic7gsqnskao" path="res://Player/player.gd" id="1_l8h54"]
[ext_resource type="Shader" uid="uid://dtn5mqmwu6vix" path="res://ShaderTest/VHS_effect.gdshader" id="2_4ntmi"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hvfyp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hvfyp"]

[sub_resource type="LabelSettings" id="LabelSettings_l8h54"]
font_size = 9

[sub_resource type="ShaderMaterial" id="ShaderMaterial_btcbx"]
shader = ExtResource("2_4ntmi")
shader_parameter/overlay = false
shader_parameter/scanlines_opacity = 0.4
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(426, 280)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 1.0
shader_parameter/roll_size = 0.0
shader_parameter/roll_variation = 0.15000000386512
shader_parameter/distort_intensity = 0.10000000475
shader_parameter/noise_opacity = 0.10000000475
shader_parameter/noise_speed = 1.0
shader_parameter/static_noise_intensity = 0.070000003325
shader_parameter/aberration = 4.7499999933364734e-08
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.0
shader_parameter/vignette_opacity = 0.0

[sub_resource type="Animation" id="Animation_4ntmi"]
resource_name = "fade_in"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_in:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_btcbx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade_in:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gwnis"]
_data = {
&"RESET": SubResource("Animation_btcbx"),
&"fade_in": SubResource("Animation_4ntmi")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_l8h54")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0067047, 0)
shape = SubResource("CapsuleShape3D_hvfyp")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9356024, -0.15919638)
fov = 60.47006

[node name="InteractRayCast" type="RayCast3D" parent="Camera3D"]
target_position = Vector3(0, 0, -2)
collide_with_areas = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
cast_shadow = 0
mesh = SubResource("CapsuleMesh_hvfyp")

[node name="FloorDetectRayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.33649266, 0)

[node name="PlayerFootstepSound" type="AudioStreamPlayer2D" parent="."]

[node name="InteractLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -19.25
offset_top = -7.25
offset_right = 19.25
offset_bottom = 7.25
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Interact"
label_settings = SubResource("LabelSettings_l8h54")

[node name="Crosshair" type="Polygon2D" parent="."]
polygon = PackedVector2Array(211, 139, 209, 141, 211, 143, 213, 141)

[node name="ShaderVHS" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_btcbx")
offset_right = 426.0
offset_bottom = 280.0
mouse_filter = 2

[node name="Fade_in" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gwnis")
}
autoplay = "fade_in"
